feat: Add Markdown rendering with syntax highlighting support
- uses React
- Integrated `marked` for Markdown rendering
- Configured `marked` to work with `highlight.js` for code syntax highlighting
- Added option to toggle between `.md format` and `Raw format`
- Implemented dynamic token calculation with memory and prompt separation
- Set up temperature control with a slider and default values for API calls
- Fixed various UI/UX issues, including persistent bottom navigation and token tracking

TODO:
- Investigate and fix issues with syntax highlighting not displaying correctly

--- a/manifest.json
+++ b/manifest.json
@@ -4,22 +4,21 @@
   "version": "1.0",
   "permissions": ["storage", "activeTab", "scripting", "background"],
   "action": {
+    "default_popup": "public/sidebar.html", 
     "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    },
-    "default_popup": "sidebar.html" 
+      "16": "public/icons/icon16.png",
+      "48": "public/icons/icon48.png",
+      "128": "public/icons/icon128.png"
+    }
   },
   "host_permissions": ["http://localhost:1234/*"],
   "background": {
-    "service_worker": "js/background.js"  
+    "service_worker": "src/js/background.js"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["js/sidebar.js"]
+      "js": ["src/js/sidebar.js"]
     }
   ]
 }
-  
