--- a/manifest.json
+++ b/manifest.json
@@ -2,23 +2,17 @@
   "manifest_version": 3,
   "name": "LLM Mentor",
   "version": "1.0",
-  "permissions": ["storage", "activeTab", "scripting", "background"],
+  "permissions": ["storage", "activeTab", "scripting", "sidePanel"],
   "action": {
-    "default_popup": "public/sidebar.html", 
+    "default_popup": "dist/sidebar.html",
     "default_icon": {
-      "16": "public/icons/icon16.png",
-      "48": "public/icons/icon48.png",
-      "128": "public/icons/icon128.png"
+      "16": "dist/icons/icon16.png",
+      "48": "dist/icons/icon48.png",
+      "128": "dist/icons/icon128.png"
     }
   },
-  "host_permissions": ["http://localhost:1234/*"],
+  "host_permissions": ["http://localhost:1234/*"],  
   "background": {
-    "service_worker": "src/js/background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["src/js/sidebar.js"]
-    }
-  ]
+    "service_worker": "dist/server-bundle.js"  
+  }
 }
