--- a/package.json
+++ b/package.json
@@ -2,31 +2,40 @@
   "name": "llm-mentor",
   "version": "1.0.0",
   "description": "LLM Mentor: Chrome Extension for Your Private LLM Instance",
-  "main": "webpack.config.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "npx webpack --config ./register-ts-node.cjs",
+    "dev": "npx webpack serve --config ./register-ts-node.cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Margus Martsepp",
   "license": "MIT",
+  "devDependencies": {
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@types/webpack": "^5.28.5",
+    "@types/webpack-dev-server": "^4.7.1",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.9.1",
+    "html-webpack-plugin": "^5.6.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
+  },
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
+    "@mui/lab": "^6.0.0-beta.13",
     "@mui/material": "^6.1.5",
+    "@types/chrome": "^0.0.279",
     "highlight.js": "^11.10.0",
     "marked": "^14.1.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "rxjs": "^7.8.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
-    "babel-loader": "^9.2.1",
-    "css-loader": "^7.1.2",
-    "style-loader": "^4.0.0",
-    "webpack-cli": "^5.1.4"
+    "rxjs": "^7.8.1",
+    "webpack-dev-server": "^5.1.0"
   }
 }
